tests/NormalTests/paczka1/fuzzy1/43863420.err
Error in line 1: dMaMzIeUk S356 99,3
Error in line 11: 3YjcSE9Y S356 7,45
Error in line 13: InSkb3QTFM S664 80,2
Error in line 20: InSkb3QTFM A182 80,5
Error in line 29: S356 S356 80,5
Error in line 33: OwxQqTEGQ S664 6,29
Error in line 30: OwxQqTEGQ S664 38,1
